# Discord-RPC-Mobile

./: README.md  config.yml  main.py  pyproject.toml
ext/: bot_stat.py  imgid.py  mcstat.py
